--- a/Uwl.Admin/index.html
+++ b/Uwl.Admin/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>Uwl后台管理-Vue</title>
+    <title>Uwl.Core-Vue</title>
   </head>
   <body>
     <div id="app"></div>
